# lct_dorateam25

./: .gitignore  CHECK_ENV.md  DEBUG_GUIDE.md  DEPLOY.md  ENV_SETUP_GUIDE.md  INTEGRATION_FIXED.md  MAP_DEBUG_GUIDE.md  MARKER_MODAL_GUIDE.md  README.md  YANDEX_MAPS_SETUP.md  env.example  index.html  mock.md  package-lock.json  package.json  postcss.config.cjs  vite.config.ts
.github/workflows/: deploy.yml
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0fc9359b4c87_rework_mkd_table.py  60b911287ddf_remove_name_column.py  6891e6057229_refactor_tables.py  92e7da0abfd0_add_new_columns_to_itp.py  e3d5d55ca719_add_table_lines.py  eb72b18e840f_init_db.py
backend/api/: __main__.py  choices.py  settings.py
backend/api/orm/: base.py  filters_parser.py  models.py  session.py
backend/api/repo/: base.py  region.py
backend/api/routes/: __init__.py  itp.py  itp_fitlers.py  lines.py  mkd.py  region.py
backend/api/routes/schemas/: base.py  region.py
backend/api/services/: base.py  exceptions.py  region.py
backend/api/services/schemas/: base.py  region.py
backend/api/utils/: dto.py
frontend/: .env.example  .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: index.css  index.js
public/: README.md
src/: App.tsx  index.css  vite-env.d.ts
src/components/: DebugPanel.tsx  KremlinModal.tsx  MarkerModal.tsx  YandexMap.tsx  index.ts
src/config/: maps.ts
src/const/: const.js
src/hooks/: index.ts  useMarkerModal.ts  useMarkerPosition.ts  useYandexMaps.ts
(+78 files in other folders)
